--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,5 +17,8 @@
     <li>
     <%= link_to('Sign up', new_user_registration_path)  %>
     </li>
+    <li>
+    <%= link_to('Posts', posts_path)  %>
+    </li>
   <% end %>
 </ul>
