--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,12 @@
 <%= link_to "Home", root_path, :class => 'brand' %>
 <ul class="nav">
+  <li>
+    <%= link_to('Posts', posts_path)  %>
+  </li>
   <% if user_signed_in? %>
+    <li>
+    <%= link_to('Profile', current_user) %>
+    </li>
     <li>
     <%= link_to('Logout', destroy_user_session_path, :method=>'delete') %>
     </li>
@@ -16,9 +22,6 @@
   <% else %>
     <li>
     <%= link_to('Sign up', new_user_registration_path)  %>
-    </li>
-    <li>
-    <%= link_to('Posts', posts_path)  %>
     </li>
   <% end %>
 </ul>
