--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,35 +1,15 @@
 - @posts.each do |post|
-  %p= post.title
+  %p= link_to post.title, post
   %p= post.video
   %p= post.content
-  %p= link_to 'Show', post
   %br
+  - if current_user
+    - if current_user.admin
+      %p= link_to 'Edit', edit_post_path(post)
+      %p= link_to 'Destroy', post, :method => :delete, :data => { :confirm => 'Are you sure?' }
+- if current_user
+  - if current_user.admin
+    = link_to 'New Post', new_post_path
 
-= link_to 'New Post', new_post_path
 
-- if current_user.admin
-  %h1 Listing posts
 
-  %table
-    %tr
-      %th Title
-      %th Video
-      %th Content
-      %th Publish
-      %th
-      %th
-      %th
-
-    - @posts.each do |post|
-      %tr
-        %td= post.title
-        %td= post.video
-        %td= post.content
-        %td= post.publish
-        %td= link_to 'Show', post
-        %td= link_to 'Edit', edit_post_path(post)
-        %td= link_to 'Destroy', post, :method => :delete, :data => { :confirm => 'Are you sure?' }
-
-  %br
-
-  = link_to 'New Post', new_post_path
