--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -15,6 +15,8 @@
   %b Publish:
   = @post.publish
 
+= render "favorite_form"
+
 = link_to 'Edit', edit_post_path(@post)
 \|
 = link_to 'Back', posts_path
