adding favoriting to list view

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -4,6 +4,7 @@
   %p= post.content
   %br
   - if current_user
+    = render "favorite_on_list_form", post: post
     - if current_user.admin
       %p= link_to 'Edit', edit_post_path(post)
       %p= link_to 'Destroy', post, :method => :delete, :data => { :confirm => 'Are you sure?' }
