--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -7,3 +7,6 @@ Following:
 %p.following= @user.following.count
 
 %p= render 'follow_form' if signed_in?
+
+- @my_favorite_posts.each do |post|
+	= render 'posts/post_list', post: post
