--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,10 @@
 <%= link_to "Home", root_path, :class => 'brand' %>
 <ul class="nav">
   <li>
-    <%= link_to('Posts', posts_path)  %>
+    <%= link_to('Latest', posts_path)  %>
+  </li>
+  <li>
+    <%= link_to('Popular', popular_posts_path)  %>
   </li>
   <% if user_signed_in? %>
     <li>
