--- a/app/views/posts/_post_list.html.haml
+++ b/app/views/posts/_post_list.html.haml
@@ -1,9 +1,10 @@
-%p= link_to post.title, post
+%h5= link_to post.title, post
+%p= "Number of Favorites: #{Favorite.where('post_id = ?', post.id).count}"
 %p= post.video
 %p= post.content
-%br
 - if current_user
 	= render "posts/favorite_on_list_form", post: post
 - if current_user.admin
 	%p= link_to 'Edit', edit_post_path(post)
 	%p= link_to 'Destroy', post, :method => :delete, :data => { :confirm => 'Are you sure?' }
+%br
