adding vembed option for creating video posts

--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -4,6 +4,7 @@
   .form-inputs
     = f.input :title
     = f.input :video
+    = f.input :vembed
     = f.input :content
     = f.input :type_list
     = f.input :site_list
