--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -22,6 +22,11 @@
     <li>
     <%= link_to('Edit account', edit_user_registration_path) %>
     </li>
+    <% if current_user.admin %>
+      <li>
+        <%= link_to('New Post', new_post_path) %>
+      </li>
+    <% end %>
   <% else %>
     <li>
     <%= link_to('Sign up', new_user_registration_path)  %>
