--- a/app/views/posts/_post_list.html.haml
+++ b/app/views/posts/_post_list.html.haml
@@ -1,7 +1,12 @@
 %h5= link_to post.title, post
 %p= "Number of Favorites: #{Favorite.where('post_id = ?', post.id).count}"
-%p= post.video
-%p= post.content
+- if !post.video.blank? || !post.vembed.blank?
+	= render 'posts/video', post: post
+- elsif !post.content.blank?
+	= render 'posts/content', post: post
+- elsif !post.image.blank?
+	= render 'posts/image', post: post
+
 - if current_user
 	= render "posts/favorite_on_list_form", post: post
 	- if current_user.admin
