--- a/app/views/posts/_favorite_on_list_form.html.haml
+++ b/app/views/posts/_favorite_on_list_form.html.haml
@@ -1,4 +1,5 @@
 #favorite_form_on_list
+	="Number of Favorites: #{Favorite.where('post_id = ?', post.id).count}"
 	- if Favorite.where("user_id = ? AND post_id = ?", current_user.id, post.id).count > 0
 		= render 'posts/unfavorite_on_list', post: post
 	- else
