--- a/app/views/posts/_post_list.html.haml
+++ b/app/views/posts/_post_list.html.haml
@@ -1,15 +1,14 @@
 %h5= link_to post.title, post
-%p= "Number of Favorites: #{Favorite.where('post_id = ?', post.id).count}"
+%p= post.teaser
+- if current_user
+	- if current_user.admin
+		= link_to 'Edit', edit_post_path(post)
+		= link_to 'Destroy', post, :method => :delete, :data => { :confirm => 'Are you sure?' }
+	= render "posts/favorite_on_list_form", post: post
 - if !post.video.blank? || !post.vembed.blank?
 	= render 'posts/video', post: post
 - elsif !post.content.blank?
 	= render 'posts/content', post: post
 - elsif !post.image.blank?
 	= render 'posts/image', post: post
-
-- if current_user
-	= render "posts/favorite_on_list_form", post: post
-	- if current_user.admin
-		%p= link_to 'Edit', edit_post_path(post)
-		%p= link_to 'Destroy', post, :method => :delete, :data => { :confirm => 'Are you sure?' }
 %br
