fixing ajax favorite error

--- a/app/views/posts/_favorite_on_list_form.html.haml
+++ b/app/views/posts/_favorite_on_list_form.html.haml
@@ -1,5 +1,5 @@
-#favorite_form_on_list
-	="Number of Favorites: #{Favorite.where('post_id = ?', post.id).count}"
+#favorite_number{:data=>{:post_id => post.id}}= "Number of Favorites: #{Favorite.where('post_id = ?', post.id).count}"
+#favorite_form_on_list{:data => {:post_id => post.id}}
 	- if Favorite.where("user_id = ? AND post_id = ?", current_user.id, post.id).count > 0
 		= render 'posts/unfavorite_on_list', post: post
 	- else
