--- a/app/views/favorites/destroy.js.erb
+++ b/app/views/favorites/destroy.js.erb
@@ -1,1 +1,2 @@
 $("#favorite_form").html("<%= escape_javascript(render('posts/favorite')) %>");
+$("#favorite_form_on_list[data-post-id='<%=@post.id%>']").html("<%= escape_javascript(render('posts/favorite_on_list', :post => @post)) %>");
