--- a/app/views/posts/_unfavorite_on_list.html.haml
+++ b/app/views/posts/_unfavorite_on_list.html.haml
@@ -1,3 +1,4 @@
-= form_for current_user.favorites.find_by_post_id(post.id), :html => { :method => :delete } do |f|
+- @post = post
+= form_for current_user.favorites.find_by_post_id(@post.id), :html => { :method => :delete }, :remote => true do |f|
 	.actions
 		= f.submit "Unfavorite"
