--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,31 +1,66 @@
-<%= link_to "Home", root_path, :class => 'brand' %>
+<%= link_to "Whipplee", root_path, :class => 'brand' %>
 <ul class="nav">
-  <li>
-    <%= link_to('Latest', posts_path)  %>
+  <li class="divider-vertical"></li>
+  <li class="dropdown">
+    <a class="dropdown-toggle" id="dLabel" role="button" data-toggle="dropdown" data-target="#" href='/users/<%="#{current_user.id}"%>'>Latest <b class="caret"></b></a>
+    <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+      <li><%= link_to('All', posts_path)  %></li>
+      <li><%= link_to('Only Video', posts_path(:filter=>"video")) %></li>
+      <li><%= link_to('Only Images', posts_path(:filter=>"image")) %></li>
+      <li><%= link_to('Only Written Content', posts_path(:filter=>"written")) %></li>
+    </ul>
   </li>
-  <li>
-    <%= link_to('Popular', popular_posts_path)  %>
+  <li class="divider-vertical"></li>
+  <li class="dropdown">
+    <a class="dropdown-toggle" id="dLabel" role="button" data-toggle="dropdown" data-target="#" href='/users/<%="#{current_user.id}"%>'>Popular <b class="caret"></b></a>
+    <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+      <li><%= link_to('Now', popular_posts_path)  %></li>
+      <li><%= link_to('Only Video', posts_path(:filter=>"video")) %></li>
+      <li><%= link_to('Only Images', posts_path(:filter=>"image")) %></li>
+      <li><%= link_to('Only Written Content', posts_path(:filter=>"written")) %></li>
+    </ul>
   </li>
+  <li class="divider-vertical"></li>
   <% if user_signed_in? %>
-    <li>
-    <%= link_to('Profile', current_user) %>
+    
+    <li class="dropdown">
+      <a class="dropdown-toggle" id="dLabel" role="button" data-toggle="dropdown" data-target="#" href='/users/<%="#{current_user.id}"%>'>Me <b class="caret"></b></a>
+      <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+        <li>
+          <%= link_to('My Favorites', current_user) %>
+        </li>
+        <li>
+          <%= link_to('Friends Favorites', feed_user_path(current_user)) %>
+        </li>
+        <li>
+          <%= link_to('Following', following_user_path(current_user)) %>
+        </li>
+        <li>
+          <%= link_to('Followers', followers_user_path(current_user)) %>
+        </li>
+        <li>
+          <%= link_to('Edit account', edit_user_registration_path) %>
+        </li>
+        <li class="divider"></li>
+        <li>
+          <%= link_to('Logout', destroy_user_session_path, :method=>'delete') %>
+        </li>
+      </ul>
     </li>
-    <li>
-    <%= link_to('Logout', destroy_user_session_path, :method=>'delete') %>
-    </li>
+    <li class="divider-vertical"></li>
   <% else %>
+    <li class="divider-vertical"></li>
     <li>
-    <%= link_to('Login', new_user_session_path)  %>
+        <%= link_to('Login', new_user_session_path)  %>
     </li>
+    <li class="divider-vertical"></li>
   <% end %>
   <% if user_signed_in? %>
-    <li>
-    <%= link_to('Edit account', edit_user_registration_path) %>
-    </li>
     <% if current_user.admin %>
       <li>
         <%= link_to('New Post', new_post_path) %>
       </li>
+      <li class="divider-vertical"></li>
     <% end %>
   <% else %>
     <li>
