--- a/app/views/posts/_favorite_on_list_form.html.haml
+++ b/app/views/posts/_favorite_on_list_form.html.haml
@@ -1,4 +1,4 @@
-#favorite_number{:data=>{:post_id => post.id}}= "Number of Favorites: #{Favorite.where('post_id = ?', post.id).count}"
+- @post = post
 #favorite_form_on_list{:data => {:post_id => post.id}}
 	- if Favorite.where("user_id = ? AND post_id = ?", current_user.id, post.id).count > 0
 		= render 'posts/unfavorite_on_list', post: post
