adding rmagick with thumb and mini versions

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -3,5 +3,6 @@ body { padding-top: 60px; }
 @import "bootstrap-responsive";
 
 ul.nav li.dropdown:hover > ul.dropdown-menu {
-    display: block;    
+    display: block;
+    margin: 0;
 }
