--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,7 +2,7 @@
 <ul class="nav">
   <li class="divider-vertical"></li>
   <li class="dropdown">
-    <a class="dropdown-toggle" id="dLabel" role="button" data-toggle="dropdown" data-target="#" href='/users/<%="#{current_user.id}"%>'>Latest <b class="caret"></b></a>
+    <a class="dropdown-toggle" id="dLabel" role="button" data-toggle="dropdown" data-target="#" href='#'>Latest <b class="caret"></b></a>
     <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
       <li><%= link_to('All', posts_path)  %></li>
       <li><%= link_to('Only Video', posts_path(:filter=>"video")) %></li>
@@ -12,7 +12,7 @@
   </li>
   <li class="divider-vertical"></li>
   <li class="dropdown">
-    <a class="dropdown-toggle" id="dLabel" role="button" data-toggle="dropdown" data-target="#" href='/users/<%="#{current_user.id}"%>'>Popular <b class="caret"></b></a>
+    <a class="dropdown-toggle" id="dLabel" role="button" data-toggle="dropdown" data-target="#" href='#'>Popular <b class="caret"></b></a>
     <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
       <li><%= link_to('Now', popular_posts_path)  %></li>
       <li><%= link_to('Only Video', posts_path(:filter=>"video")) %></li>
@@ -49,7 +49,6 @@
     </li>
     <li class="divider-vertical"></li>
   <% else %>
-    <li class="divider-vertical"></li>
     <li>
         <%= link_to('Login', new_user_session_path)  %>
     </li>
@@ -66,5 +65,6 @@
     <li>
     <%= link_to('Sign up', new_user_registration_path)  %>
     </li>
+    <li class="divider-vertical"></li>
   <% end %>
 </ul>
