--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -24,7 +24,7 @@
   <% if user_signed_in? %>
     
     <li class="dropdown">
-      <a class="dropdown-toggle" id="dLabel" role="button" data-toggle="dropdown" data-target="#" href='/users/<%="#{current_user.id}"%>'>Me <b class="caret"></b></a>
+      <a class="dropdown-toggle" id="dLabel" role="button" data-toggle="dropdown" data-target="#" href='/users/<%="#{current_user.id}"%>'><%=image_tag current_user.avatar.mini%> Me <b class="caret"></b></a>
       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
         <li>
           <%= link_to('My Favorites', current_user) %>
