--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -2,7 +2,42 @@
 body { padding-top: 60px; }
 @import "bootstrap-responsive";
 
+
+$bottomgreygradient: rgb(236, 236, 236);
+$grey: #DCDDD8;
+
+
 ul.nav li.dropdown:hover > ul.dropdown-menu {
     display: block;
     margin: 0;
+}
+
+
+.navbar-inner {
+	min-height: 40px;
+	padding-left: 20px;
+	padding-right: 20px;
+	background-color: $grey;
+	background-image: -moz-linear-gradient(top, $bottomgreygradient, $grey);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from($bottomgreygradient), to($grey));
+	background-image: -webkit-linear-gradient(top, $bottomgreygradient, $grey);
+	background-image: -o-linear-gradient(top, $bottomgreygradient, $grey);
+	background-image: linear-gradient(to bottom, $bottomgreygradient, $grey);
+	background-repeat: repeat-x;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$bottomgreygradient', endColorstr='$grey', GradientType=0);
+	border: 1px solid #d4d4d4;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	-webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+	-moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+}
+
+.navbar .nav > li > a {
+	float: none;
+	padding: 10px 15px 10px;
+	color: #354B5E;
+	text-decoration: none;
+	text-shadow: 0 1px 0 white;
 }
