--- a/app/views/users/_follow_form.html.haml
+++ b/app/views/users/_follow_form.html.haml
@@ -1,5 +1,5 @@
 - unless current_user == @user
-	#follow_form
+	#follow_form.infobox.left
 		- if current_user.following?(@user)
 			= render 'unfollow'
 		- else
