--- a/app/views/posts/popular.html.haml
+++ b/app/views/posts/popular.html.haml
@@ -1,13 +1,8 @@
-%h5 Filters
-= link_to "Video", popular_posts_path(:filter => "Video")
-= link_to "Audio", popular_posts_path(:filter => "Audio")
-= link_to "Image", popular_posts_path(:filter => "Image")
-= link_to "Written", popular_posts_path(:filter => "Written")
-= link_to "Potty", popular_posts_path(:filter => "Potty")
-= link_to "Political", popular_posts_path(:filter => "Political")
-= link_to "Pop Culture", popular_posts_path(:filter => "Pop Culture")
+%h3= "Most Popular #{@filter_type.titlecase} Posts"
 
-%h3= "Popular #{@filter_type} Posts"
+= render "populartabs"
+
+
 - @posts.each do |post|
   = render 'post_list', post: post
 = will_paginate @posts
