set up domain and creating feature to see who others are following and who follow them

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,7 +1,7 @@
 @import "bootstrap";
-body { padding-top: 60px; }
+@import url(http://fonts.googleapis.com/css?family=Inconsolata:400,700);
+body { padding-top: 60px;}
 @import "bootstrap-responsive";
-
 
 $bottomgreygradient: rgb(236, 236, 236);
 $grey: #DCDDD8;
