--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -28,6 +28,7 @@ $grey: #dcddd8;
 
 .userextras {
 	width:60%;
+	margin: 5px 0 0 0;
 }
 
 .useravatar {
@@ -44,6 +45,7 @@ $grey: #dcddd8;
 
 .userlistarea {
 	height:90px;
+	margin: 10px 0 0 0;
 }
 
 .bold {
