--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,20 +1,5 @@
 #topbox
-	.userinfo.left
-		.useravatar.left= image_tag @user.avatar.thumb
-		%h4= @user.name
-		%p= "Joined #{@user.created_at.strftime("%B #{@user.created_at.day.ordinalize}, %Y")}"
-	.userextras.left
-		.infobox.left
-			.bold Favorites
-			%p= @my_favorite_posts.count
-		.infobox.left
-			.bold Followers
-			%p.followers= @user.followers.count
-		.infobox.left
-			.bold Following
-			%p.following= @user.following.count
-		= render 'follow_form' if signed_in?
-	.clear
+	= render "userbar"
 %h3= "#{@user.name} Favorites"
 - @my_favorite_posts.each do |post|
 	= render 'posts/post_list', post: post
