--- a/app/views/users/show_follow.html.haml
+++ b/app/views/users/show_follow.html.haml
@@ -3,12 +3,14 @@
 	.listitemborder
 	- @following.each do |following|
 		.userlistarea.listitemborder
-			.left= image_tag following.avatar.thumb
-			%h4= following.name
+			- @my_favorite_posts = following.favorites.map {|favorite| Post.find(favorite.post_id)}
+			- @user = following
+			= render "userbar"
 - elsif @title == "Followers"
 	%h1 You Are Followed By
 	.listitemborder
 	- @followers.each do |follower|
 		.userlistarea.listitemborder
-			.left= image_tag follower.avatar.thumb
-			%h4= follower.name
+			- @my_favorite_posts = follower.favorites.map {|favorite| Post.find(favorite.post_id)}
+			- @user = follower
+			= render "userbar"
