--- a/app/views/posts/_post_list.html.haml
+++ b/app/views/posts/_post_list.html.haml
@@ -1,10 +1,7 @@
-%h5= link_to post.title, post
-%p= post.teaser
-- if current_user
-	- if current_user.admin
-		= link_to 'Edit', edit_post_path(post)
-		= link_to 'Destroy', post, :method => :delete, :data => { :confirm => 'Are you sure?' }
-	= render "posts/favorite_on_list_form", post: post
+=render "post_data", post: post
+%p
+	%a.show_hide{data: {post: post.id} }
+		Show/Hide >>
 - if !post.video.blank? || !post.vembed.blank?
 	= render 'posts/video', post: post
 - elsif !post.content.blank?
@@ -12,3 +9,4 @@
 - elsif !post.image.blank?
 	= render 'posts/image', post: post
 %br
+.listitemborder
