--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -41,3 +41,19 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
 	text-decoration: none;
 	text-shadow: 0 1px 0 white;
 }
+
+.navbar .brand {
+	float: left;
+	display: block;
+	padding: 5px 20px 5px;
+	margin-left: -20px;
+	font-size: 20px;
+	font-weight: 200;
+	color: #777777;
+	text-shadow: 0 1px 0 white;
+}
+
+.navbar:hover .brand:hover {
+	color:none;
+	background:none;
+}
