--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "HeHeMachine", root_path, :class => 'brand' %>
+<%= link_to image_tag('hehelogo.png'), root_path, :class => 'brand' %>
 <ul class="nav">
   <li class="divider-vertical"></li>
   <li class="dropdown">
