--- a/app/views/posts/_post_list.html.haml
+++ b/app/views/posts/_post_list.html.haml
@@ -1,4 +1,4 @@
-=render "post_data", post: post
+=render "posts/post_data", post: post
 - if !post.video.blank? || !post.vembed.blank?
 	= render 'posts/video', post: post
 - elsif !post.content.blank?
