--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,12 @@
       <div class="container">
         <div class="content">
            <div class="row">
-            <div class="span12">
+            <div class="span9">
               <%= render 'layouts/messages' %>
               <%= yield %>
+            </div>
+            <div class="span3" style="background-color:#FAFAFA;height:800px;">
+              
             </div>
           </div>
           <footer>
