--- a/app/views/posts/_post_data.html.haml
+++ b/app/views/posts/_post_data.html.haml
@@ -1,5 +1,5 @@
 .post_metadata{class: post.id }
-	.post_thumbnail.left
+	.post_thumbnail.rounded.left
 		= render "posts/thumbnail", post: post
 	.basic_data.left
 		%h4= link_to post.title, post
