--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,4 +1,4 @@
-%h3= "Lastest #{@filter_type.titlecase} Comedy Posts"
+%h3= "Latest #{@filter_type.titlecase} Comedy Posts"
 
 = render "tabselection"
 	
