favicon and fixed width on userbar infoboxes

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -23,7 +23,7 @@ $grey: #dcddd8;
 	font-size: 12px;
 	border: 1px solid #999999;
 	margin-right: 5px;
-	min-width: 15%;
+	width: 65px;
 }
 
 .userextras {
