--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -39,6 +39,9 @@
           <%= link_to('Followers', followers_user_path(current_user)) %>
         </li>
         <li>
+          <%= link_to('Find Friends', users_path) %>
+        </li>
+        <li>
           <%= link_to('Edit account', edit_user_registration_path) %>
         </li>
         <li class="divider"></li>
