customizing add this urls

--- a/app/views/posts/_favorite_on_list_form.html.haml
+++ b/app/views/posts/_favorite_on_list_form.html.haml
@@ -8,4 +8,4 @@
 	- else
 		.heart_out= link_to image_tag("heart_grey.png"), new_user_registration_path
 	.clear
-= render "posts/addthis"
+= render "posts/addthis", post: post
