added dynamic form expansion

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -136,3 +136,7 @@ button.show_hide {
 button.show_hide:hover {
 	background:$grey;
 }
+
+.form_video, .form_written, .form_image {
+	display:none;
+}
