--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,16 @@
               <%= yield %>
             </div>
             <div class="span3" style="background-color:#FAFAFA;height:800px;">
-              
+              <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+              <!-- hehemachine square -->
+              <ins class="adsbygoogle"
+                   style="display:inline-block;width:200px;height:200px"
+                   data-ad-client="ca-pub-0370939253760948"
+                   data-ad-slot="6375698846"></ins>
+
+              <script>
+              (adsbygoogle = window.adsbygoogle || []).push({});
+              </script>
             </div>
           </div>
           <footer>
