--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -142,7 +142,7 @@ button.show_hide:hover {
 }
 
 
-input[type="text"] {
+input[type="text"], input[type="email"], input[type="password"] {
 	width:500px;
 	height:40px;
 	font-size: 16px;
