adding centering to ads

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
               <%= render 'layouts/messages' %>
               <%= yield %>
             </div>
-            <div class="span3" style="background-color:#FAFAFA;height:800px;">
+            <div class="span3" style="background-color:#FAFAFA;height:800px;text-align:center;">
               <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
               <!-- hehemachine square -->
               <ins class="adsbygoogle"
