welcome message for not logged in users

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -91,3 +91,12 @@ a:hover {
 	color:none;
 	background:none;
 }
+
+.welcome_agenda {
+	background-color:#FFFFB5;
+	border: 1px solid lightgrey;
+	padding: 10px;
+	margin: 0 0 25px 0;
+	font-size:16px;
+	font-family: helvetica;
+}
