adding new routing for user feed and new banner

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,9 @@
               <script>
               (adsbygoogle = window.adsbygoogle || []).push({});
               </script>
+              <div class="fake_banner">
+                <%= image_tag 'onlineedu_banner.png' %>
+              </div>
             </div>
           </div>
           <footer>
