fixing bug in list of friends following button

--- a/app/views/user_mailer/following_you.html.erb
+++ b/app/views/user_mailer/following_you.html.erb
@@ -1,5 +1,5 @@
 <p>Yo <%= @user.name %>,</p>
 
-<p><%= @follower.name %> is now following you on Hehemachine.com.</p>
+<p><%= @follower.name %> is now following you on heheMachine.com.</p>
 
-<p>- The HeheMachine Team</p>
+<p>- The heheMachine Team</p>
