--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -4,4 +4,4 @@
 
 <p>You can also follow your friends and which creates a curated feed with everything they find hysterical! Get ready to feel the pain of laughing too damn much!</p>
 
-<p>- The HeheMachine Team</p>
+<p>- The heheMachine Team</p>
