--- a/app/views/relationships/create.js.erb
+++ b/app/views/relationships/create.js.erb
@@ -1,2 +1,3 @@
-$("#follow_form").html("<%= escape_javascript(render('users/unfollow')) %>");
-$(".followers").html("<%= @user.followers.count %>");
+$("#follow_form[data-user-id='<%=@user.id%>']").html("<%= escape_javascript(render('users/unfollow')) %>");
+$(".followers[data-user-id='<%=@user.id%>']").html("<%= @user.followers.count %>");
+$(".following[data-user-id='<%=@user.id%>']").html("<%= @user.following.count %>");
