--- a/app/views/posts/_post_list.html.haml
+++ b/app/views/posts/_post_list.html.haml
@@ -1,9 +1,12 @@
-=render "posts/post_data", post: post
-- if !post.video.blank? || !post.vembed.blank?
-	= render 'posts/video', post: post
-- elsif !post.content.blank?
-	= render 'posts/content', post: post
-- elsif !post.image.blank?
-	= render 'posts/image', post: post
-%br
-.listitemborderposts
+- if post
+	=render "posts/post_data", post: post
+	- if !post.video.blank? || !post.vembed.blank?
+		= render 'posts/video', post: post
+	- elsif !post.content.blank?
+		= render 'posts/content', post: post
+	- elsif !post.image.blank?
+		= render 'posts/image', post: post
+	%br
+	.listitemborderposts
+- else
+	There are no popular posts this week. We suck! Sorry.
