adding whole changes including friendly urls for posts, new icons, new logo, new side bar

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -31,7 +31,7 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
 }
 
 a, a:visited {
-	color:#475F77;
+	color:#006FB9;
 	//-webkit-transition: color 1s;
 	//-moz-transition: color 1s;
 	//-o-transition: color 1s;
