--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -2,11 +2,16 @@
 %p
   = @post.teaser
 %p
-  = @post.direct
+  %b Created by:
+  = @post.creator_list
+
+%p
+  %b Orignal Post:
+  = link_to @post.direct
+
 - if !@post.image.blank? 
   %p 
     = image_tag @post.image
-    = @post.image.file.exists?
 
 - if !@post.video.blank? || !@post.vembed.blank?
   %p= raw @post.vembed
@@ -15,13 +20,6 @@
 - if !@post.content.blank?
   %p= raw @post.content
 
-
-
-%p
-  = @post.filter_list
-  = @post.type_list
-  = @post.site_list
-  = @post.creator_list
 
 = render "favorite_form"
 
