--- a/app/views/posts/_addthis.html.erb
+++ b/app/views/posts/_addthis.html.erb
@@ -1,6 +1,6 @@
 <!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_16x16_style" 
-	addthis:url="http://www.hehemachine.com/posts/<%=post.id%>"
+	addthis:url="http://www.hehemachine.com/posts/<%=post.slug%>"
     addthis:title="<%= post.title %>"
     addthis:description="<%= post.teaser %>"
 	style="float:right;">
