adding audio and twitter posts possiblities

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -139,7 +139,7 @@ button.show_hide:hover {
 	background:$grey;
 }
 
-.form_video, .form_written, .form_image {
+.form_video, .form_written, .form_image, .form_twitter, .form_audio {
 	display:none;
 }
 
