--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,6 +8,8 @@
       <li><%= link_to('Only Video', posts_path(:filter=>"video")) %></li>
       <li><%= link_to('Only Images', posts_path(:filter=>"image")) %></li>
       <li><%= link_to('Only Written Content', posts_path(:filter=>"written")) %></li>
+      <li><%= link_to('Only Audio', posts_path(:filter=>"audio")) %></li>
+      <li><%= link_to('Only Twitter', posts_path(:filter=>"twitter")) %></li>
     </ul>
   </li>
   <li class="divider-vertical"></li>
@@ -18,6 +20,8 @@
       <li><%= link_to('Only Video', popular_posts_path(:filter=>"video")) %></li>
       <li><%= link_to('Only Images', popular_posts_path(:filter=>"image")) %></li>
       <li><%= link_to('Only Written Content', popular_posts_path(:filter=>"written")) %></li>
+      <li><%= link_to('Only Audio', popular_posts_path(:filter=>"audio")) %></li>
+      <li><%= link_to('Only Twitter', popular_posts_path(:filter=>"twitter")) %></li>
     </ul>
   </li>
   <li class="divider-vertical"></li>
