--- a/app/views/posts/_populartabs.html.haml
+++ b/app/views/posts/_populartabs.html.haml
@@ -31,3 +31,9 @@
 	- else
 		%li	
 			= link_to "Audio", popular_posts_path(:filter => "audio")
+	- if params[:filter] == "twitter"
+		%li.active
+			= link_to "Twitter", popular_posts_path(:filter => "twitter")
+	- else
+		%li	
+			= link_to "Twitter", popular_posts_path(:filter => "twitter")
